# corvid-hex

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  corvid-hex.test.ts  package.json  placeholder.test.ts  specsync.json  tsconfig.json  validate.test.ts
.github/workflows/: ci.yml  docs.yml  release.yml  spec-check.yml
specs/buffer/: buffer.spec.md  context.md  requirements.md  tasks.md
specs/chx/: chx.spec.md  context.md  requirements.md  tasks.md
specs/diff/: context.md  diff.spec.md  requirements.md  tasks.md
specs/diff_render/: context.md  diff_render.spec.md  requirements.md  tasks.md
specs/entropy/: context.md  entropy.spec.md  requirements.md  tasks.md
specs/format/: context.md  format.spec.md  requirements.md
specs/input/: context.md  input.spec.md  requirements.md  tasks.md
specs/inspector/: context.md  inspector.spec.md  requirements.md  tasks.md
specs/render/: context.md  render.spec.md  requirements.md  tasks.md
specs/search/: context.md  requirements.md  search.spec.md  tasks.md
src/: app.rs  buffer.rs  diff.rs  diff_render.rs  entropy.rs  format.rs  input.rs  inspector.rs  main.rs  render.rs  search.rs  strings.rs
tests/: binary-diff.test.ts  format.test.ts  mmap_integration.rs  search.test.ts  strings.test.ts
