[package]
name = "chx"
version = "0.1.0"
edition = "2021"
description = "A TUI hex editor"
license = "MIT"
repository = "https://github.com/CorvidLabs/corvid-hex"

[lib]
name = "chx"
path = "src/lib.rs"

[[bin]]
name = "chx"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
